Fix issue03906: Gender and Yes/No with wrong alignment Dev Modify styles of in-line radio questions to display properly in IE
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@8046 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/templates/eirenicon/ie_fix_6.css
+++ b/templates/eirenicon/ie_fix_6.css
@@ -5,7 +5,7 @@
 }
  .yes-no ul
 ,.gender ul {
-	margin-left: 1em;
+	margin-left: 2em;
 }
 
 .multiple-short-txt ul.numbers-only li span {
@@ -19,7 +19,7 @@
 ,.multiple-short-txt ul li
 ,.multiple-opt-comments ul li
 ,.numeric-multi ul li {
-	margin-left: 0%;
+	margin-left: 0.5em;
 	padding-left: 0%;
 }
 
