--- a/templates/eirenicon/ie_fix_7.css
+++ b/templates/eirenicon/ie_fix_7.css
@@ -2,23 +2,26 @@
 .choice-5-pt-radio ul {
 	margin-left: 2.5em;
 }
- .yes-no ul
-,.gender ul {
-	margin-left: 1em;
+ .yes-no ul,
+ .gender ul {
+	margin-left: 2em;
 }
 
 .multiple-short-txt ul.numbers-only li span {
 	width: 10em;
 }
 
+.multiple-short-txt ul,
+.multiple-opt-comments ul,
+.numeric-multi ul {
+	margin-left: 1em;
+	padding-left: 0%;
+}
 
- .multiple-short-txt ul
-,.multiple-opt-comments ul
-,.numeric-multi ul
-,.multiple-short-txt ul li
-,.multiple-opt-comments ul li
-,.numeric-multi ul li {
-	margin-left: 0%;
+.multiple-short-txt ul li,
+.multiple-opt-comments ul li,
+.numeric-multi ul li {
+	margin-left: 0;
 	padding-left: 0%;
 }
 
